# locci-url

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  HTTP.rest  README.md  compose.yaml  justfile
src/: api.rs  db.rs  lib.rs  main.rs  shortener.rs
tests/: api_tests.rs  db_tests.rs  integration_tests.rs  shortener_tests.rs
web/: pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/app/register/: page.tsx
web/components/: meteor-effect.tsx  mode-toggle.tsx  theme-provider.tsx  url-history.tsx  url-shortener-form.tsx
web/components/auth/: login-form.tsx  register-form.tsx
web/components/layout/: footer.tsx  header.tsx
web/lib/: api.ts  auth.ts
