[package]
name = "locci-url"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["form", "macros"] }
dotenvy = "0.15.7"
libsql = { version = "0.9.2", features = ["wasm"]}
tower = "0.5.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3.8"
reqwest = { version = "0.12.15", features = ["json"] }
